# kxmlgui_examples

./: README
example2/: CMakeLists.txt  README  build.sh  component_a.rc  component_b.rc  componentb.cpp  componentb.h  kxmlexampleui.rc
example3/: CMakeLists.txt  README  build.sh  component_a.rc  component_b.rc  componenta.cpp  componenta.h  componentb.cpp  componentb.h  kxmlexampleui.rc  main.cpp  mainwindow.cpp  mainwindow.h  uninstall.sh
